<resources>
    <string name="app_name">PrivacyCentralApp</string>

    <!-- Dashboard -->
    <string name="dashboard_title">Quick Privacy</string>
    <string name="dashboard_state_label_off">Your online privacy is not protected</string>
    <string name="dashboard_state_label_on">Your online privacy is now protected!</string>
    <string name="dashboard_change_state_explanations">Tap to enable your privacy preferences</string>
    <string name="dashboard_state_trackers_label">Trackers:</string>
    <string name="dashboard_state_trackers_off">Vulnerable</string>
    <string name="dashboard_state_trackers_on">Denied</string>
    <string name="dashboard_state_geolocation_label">Geolocation:</string>
    <string name="dashboard_state_geolocation_off">Exposed</string>
    <string name="dashboard_state_geolocation_on">Fake</string>
    <string name="dashboard_state_ipaddress_label">IP address:</string>
    <string name="dashboard_state_ipaddress_off">Exposed</string>
    <string name="dashboard_state_ipaddress_on">Hidden</string>
    <string name="dashboard_graph_label">Personal data leakage</string>
    <string name="dashboard_graph_period">Last 24 hours</string>
    <string name="dashboard_graph_trackers_legend">%s Trackers</string>

    <string name="dashboard_am_i_tracked_title">Am I tracked?</string>
    <string name="dashboard_am_i_tracked_subtitle">%1$d app trackers, %2$d active trackers</string>
    <string name="dashboard_apps_permissions_title">Apps Permissions</string>
    <string name="dashboard_apps_permissions_subtitle">Manage your permissions</string>
    <string name="dashboard_location_title">Geolocation mode</string>
    <string name="dashboard_location_subtitle_off">Real geolocation</string>
    <string name="dashboard_location_subtitle_on">Fake geolocation</string>
    <string name="dashboard_internet_activity_privacy_title">My internet activity privacy</string>
    <string name="dashboard_internet_activity_privacy_subtitle_off">Real IP address exposed</string>
    <string name="dashboard_internet_activity_privacy_subtitle_on">Real IP address hidden</string>

    <!-- IpScrambling -->
    <string name="ipscrambling_title">My internet activity</string>
    <string name="ipscrambling_info">Choose if you want to expose your real IP address or hide when Quick Privacy is enabled.</string>
    <string name="ipscrambling_real_ip_label">Use real IP address</string>
    <string name="ipscrambling_real_ip_subtitle">I can be tracked by my IP address</string>
    <string name="ipscrambling_hide_ip_label">Hide IP address</string>
    <string name="ipscrambling_hide_ip_subtitle">I am anonymous on the internet</string>
    <string name="ipscrambling_tor_disclaimer"><b>Note:</b> when active, this setting will slow down your Internet connectivity speed (uses Thor network).</string>
    <string name="ipscrambling_location_label">Force a country of origin:</string>
    <string name="ipscrambling_any_location">Any country</string>
    <string name="ipscrambling_select_app">Apply this setting to all selected apps:</string>

    <!-- Location -->
    <string name="location_title">Fake my location</string>
    <string name="location_info">Choose if you want to use your real location when Quick Privacy is enabled.</string>
    <string name="location_use_real_location">Use real location</string>
    <string name="location_use_random_location">Use random plausible location</string>
    <string name="location_use_specific_location">Use specific location</string>
    <string name="location_hint_longitude">Longitude</string>
    <string name="location_hint_latitude">Latitude</string>
    <string name="location_input_error">Invalid coordinates</string>

    <!-- Trackers -->
    <string name="trackers_title">Manage trackers</string>
    <string name="trackers_info">See tracker usage and which trackers are present in your apps.</string>
    <string name="trackers_count_label">%d trackers</string>
    <string name="trackers_period_day">24 hours</string>
    <string name="trackers_period_month">past month</string>
    <string name="trackers_period_year">past year</string>
    <string name="trackers_applist_title">Allow or deny trackers in apps</string>

    <!-- App Trackers -->
    <string name="apptrackers_block_all_toggle">Block trackers</string>
    <string name="apptrackers_no_trackers_yet_block_off">No trackers were detected yet. If new trackers are detected they will be updated here.</string>
    <string name="apptrackers_no_trackers_yet_block_on">No trackers were detected yet. All future trackers will be blocked.</string>

    <!-- -->
    <string name="quick_protection_info">Quick protection enables these settings when turned on</string>
    <string name="quick_protection_settings_list"> - All trackers are turned off.\n- Your geolocation will be faked.\n- Your real IP address will be hidden.</string>
    <string name="learn_more">Learn more</string>

    <string name="add_location">Add location</string>
    <string name="i_am_exposing">I am exposing my real IP address</string>
    <string name="ipscrambling_all_apps_scrambled">All apps use hidden IP</string>
    <string name="ipscrambling_only_selected_apps_scrambled">Only the following apps use hidden IP</string>

    <string name="ipscrambling_is_starting">Tor is starting...</string>
    <string name="ipscrambling_is_stopping">Tor is stopping...</string>

    ipscrambling_any_location
    <string name="permission_control_info">Manage and control apps requesting various permissions.</string>

    <string name="apps_allowed">%1$d of %2$d apps allowed</string>
    <string name="apps_access_to_permission">Apps which has access to %1$s permission</string>

    <string name="real_location_mode">Real location mode</string>
    <string name="random_location_mode">Random location mode</string>
    <string name="fake_location_mode">Fake location mode</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permission</string>
    <string name="please_enter_valid_lat_long">Please enter valid latitude and longitude value</string>
    <string name="quick_protection">Quick Protection</string>
    <string name="privacy_dashboard">Privacy Dashboard</string>
    <string name="click_to_learn_more">Click to learn more</string>
    <string name="apps_permissions">Apps Permission</string>
    <string name="trackers">Trackers</string>
    <string name="manage_trackers_info">See trackers usage over time and manage trackers available in applications</string>
    <string name="following_trackers_in_use">Following trackers are in use</string>
    <string name="enable_disable_tracker_info">Enable or disable this tracker for the following apps</string>
    <string name="tracker">Tracker</string>
</resources>