<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <include layout="@layout/topbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            tools:context=".main.MainActivity"
            >

            <TextView
                android:id="@+id/fake_location_info"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/location_info"
                android:lineSpacingExtra="5sp"
                />

            <RadioGroup
                android:id="@+id/location_choices"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                >

                <foundation.e.privacycentralapp.common.RightRadioButton
                    android:id="@+id/radio_use_real_location"
                    android:layout_height="52dp"
                    android:layout_width="match_parent"
                    android:text="@string/location_use_real_location"
                    android:textSize="14sp"
                    />

                <foundation.e.privacycentralapp.common.RightRadioButton
                    android:id="@+id/radio_use_random_location"
                    android:layout_height="52dp"
                    android:layout_width="match_parent"
                    android:text="@string/location_use_random_location"
                    android:textSize="14sp"
                    />

                <foundation.e.privacycentralapp.common.RightRadioButton
                    android:id="@+id/radio_use_specific_location"
                    android:layout_height="52dp"
                    android:layout_width="match_parent"
                    android:text="@string/location_use_specific_location"
                    android:textSize="14sp"
                    />
            </RadioGroup>


            <foundation.e.privacycentralapp.features.location.FakeLocationMapView
                android:id="@+id/mapView"
                android:layout_height="220dp"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                mapbox:mapbox_cameraZoom="8"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/location_hint_longitude"
                android:id="@+id/textlayout_longitude"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                app:endIconDrawable="@drawable/ic_valid"
                app:endIconMode="custom"
                app:endIconTint="@color/green_valid"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_longitude"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/textlayout_latitude"
                android:hint="@string/location_hint_latitude"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                app:endIconDrawable="@drawable/ic_valid"
                app:endIconMode="custom"
                app:endIconTint="@color/green_valid"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_latitude"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
