<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <include layout="@layout/topbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <TextView
                android:id="@+id/internet_activity_privacy_info"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/ipscrambling_info"
                android:lineSpacingExtra="5sp"
                />

            <RadioGroup
                android:id="@+id/internet_activity_privacy_choices"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical"
                >
                <include layout="@layout/ipscrambling_item_selectmode"
                android:id="@+id/radio_use_hidden_ip"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                app:title="@{@string/ipscrambling_hide_ip_label}"
                app:subtitle="@{@string/ipscrambling_hide_ip_subtitle}"
                />
                <include layout="@layout/ipscrambling_item_selectmode"
                    android:id="@+id/radio_use_real_ip"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    app:title="@{@string/ipscrambling_real_ip_label}"
                    app:subtitle="@{@string/ipscrambling_real_ip_subtitle}"
                    />
            </RadioGroup>

            <TextView  android:id="@+id/tor_disclaimer"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="4dp"
                android:textSize="12sp"
                android:textColor="@color/black_text_2"
                android:text="@string/ipscrambling_tor_disclaimer"

                />

            <ProgressBar
                android:id="@+id/loader"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/ipscrambling_location_label"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/ipscrambling_location_label"
                android:textColor="@color/black_text"
                android:textFontWeight="500"
                android:textSize="14sp"
                />
            <FrameLayout
                android:id="@+id/select_location_container"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/outlined_background"
                android:layout_marginTop="16dp"
                android:padding="1dp"
                >
                <Spinner android:id="@+id/ipscrambling_select_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    />
            </FrameLayout>
            <TextView
                android:id="@+id/ipscrambling_select_apps"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/ipscrambling_select_app"
                android:textColor="@color/black_text"
                android:textFontWeight="500"
                android:textSize="14sp"
                />
        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/apps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>